src/objects/VabletFieldSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>ExceptionText__c</fullName>
        <label>ExceptionText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query1__c</fullName>
        <label>Query 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Separator1__c</fullName>
        <label>Separator 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Separator2__c</fullName>
        <label>Separator 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextConstant10__c</fullName>
        <label>Text Constant 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextConstant11__c</fullName>
        <label>Text Constant 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextConstant12__c</fullName>
        <label>Text Constant 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextFormat1__c</fullName>
        <label>Text Format 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextFormat2__c</fullName>
        <label>Text Format 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextFormat3__c</fullName>
        <label>Text Format 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type1__c</fullName>
        <label>Type 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type2__c</fullName>
        <label>Type 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type3__c</fullName>
        <label>Type 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>VabletFieldSetting</label>
    <pluralLabel>VabletFieldSettings</pluralLabel>
</CustomObject>